# rust-mnist-cnn

./: Cargo.toml  readme.md
src/: main.rs  model.rs
src/assets/: model.json
