[package]
name = "draw-rust"
version = "0.1.0"
authors = ["Rad Merales <https://github.com/radmerales>"]


[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
xtask = "0.1.0"
piston_window = "0.132.0"
image = "0.25.1"
vecmath = "1.0.0"
gfx_device_gl = "0.16.2"
gfx_text = "0.33.0"
find_folder = "0.3.0"
serde = "1.0.204"
fs = "0.0.5"
serde_json = "1.0.120"
